<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:id="@+id/objavite"
    tools:context=".ObjaviFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ObjaviBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/dugmeboja"
            android:text="@string/objavi_voznju"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardPretraga4" />

        <TextView
            android:id="@+id/tvNaslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/odakle_polazite"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPretraga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/dugmeboja"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNaslov">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3650a6"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ivSearchIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icon2"
                    android:src="@android:drawable/ic_menu_search"
                    android:tint="@android:color/white"
                    tools:ignore="UseAppTint" />

                <EditText
                    android:id="@+id/ObjaviOdakleTXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="@string/unesite_punu_adresu"
                    android:textColor="@color/design_default_color_surface"
                    android:textSize="16sp"
                    app:tint="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/ObjaviLokacijaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/dugmeboja"
            android:text="@string/upotrebi_moju_lokaciju"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardPretraga" />

        <TextView
            android:id="@+id/tvNaslov4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/gde_idete"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ObjaviLokacijaBtn" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPretraga2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/dugmeboja"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNaslov4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3650a6"
                android:gravity="center_vertical"
                android:importantForAccessibility="no"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ivSearchIcon2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@android:drawable/ic_menu_search"
                    android:tint="@android:color/white"
                    tools:ignore="UseAppTint" />

                <EditText
                    android:id="@+id/ObjaviGdeTXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="@string/unesite_punu_adresu"
                    android:textColor="@color/design_default_color_surface"
                    android:textSize="16sp"
                    app:tint="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="KOLIKO PUTNIKA?"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardPretraga2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPretraga3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3650a6"
                android:gravity="center_vertical"
                android:importantForAccessibility="no"
                android:orientation="horizontal"
                android:padding="16dp">
                

                <EditText
                    android:id="@+id/ObjaviKolikoTXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="Unesite broj putnika"
                    android:textColor="@color/design_default_color_surface"
                    android:textSize="16sp"
                    app:tint="@android:color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            android:text="U KOLIKO SATI?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardPretraga3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPretraga4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3650a6"
                android:gravity="center_vertical"
                android:importantForAccessibility="no"
                android:orientation="horizontal"
                android:padding="16dp">

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Unesite u koje vreme"
                    android:inputType="time"
                    android:textColor="@color/design_default_color_surface"
                    android:textSize="16sp"
                    app:tint="@android:color/white" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Polje za unos adrese -->

    <!-- Koristi moju lokaciju -->

</FrameLayout>